@@ -1,3 +1,10 @@
+Wed Nov 30 21:33:46 UTC 2011  Trevor Fields  <fields_t@ociweb.com>
+
+        * rpm/buildrpm.sh:
+
+          Fixes to correctly gather packager information.
+          Changes so rpm can be built by non root user.
+
 Mon Nov  7 15:37:29 UTC 2011  Adam Mitz  <mitza@ociweb.com>
 
         * docs/README:
